metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/TCAP__Call_Coach_Metrics__c.object-meta.xml
<CustomObject>
    <description>Object to keep Call Coach metrics for a call</description>
    <label>Call Coach Metrics</label>
    <nameField>
        <displayFormat>CCM-{00000000}</displayFormat>
        <label>Call Coach Metrics</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Coach Metrics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>