metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Agent_Engaging_Questions__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Agent_Engaging_Questions__c</fullName>
    <description>Number of questions asked by the sales rep followed by a customer&apos;s long monologue</description>
    <inlineHelpText>Number of questions asked by the sales rep followed by a customer&apos;s long monologue</inlineHelpText>
    <label>Agent Engaging Questions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>