metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Agent_Interruptions__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Agent_Interruptions__c</fullName>
    <description>A number of times the sales rep spoke over the customer</description>
    <inlineHelpText>A number of times the sales rep spoke over the customer</inlineHelpText>
    <label>Agent Interruptions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>