metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Agent_Positive_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Agent_Positive_Sentiment__c</fullName>
    <description>Number of agent statements that are highly positive</description>
    <inlineHelpText>Number of agent statements that are highly positive</inlineHelpText>
    <label>Agent Positive Sentiment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>