metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Agent_Questions__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Agent_Questions__c</fullName>
    <description>Number of questions asked by the sales rep</description>
    <inlineHelpText>Number of questions asked by the sales rep</inlineHelpText>
    <label>Agent Questions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>