metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Agent_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Agent_Sentiment__c</fullName>
    <description>Sentiment analysis of the sales rep (score over 0 is positive)</description>
    <inlineHelpText>Sentiment analysis of the sales rep (score over 0 is positive)</inlineHelpText>
    <label>Agent Sentiment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>