metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Agent_Talk_Speed__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Agent_Talk_Speed__c</fullName>
    <description>Average number of words per second pronounced by a sales rep</description>
    <inlineHelpText>Average number of words per second pronounced by a sales rep</inlineHelpText>
    <label>Agent Talk Speed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>