metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Call_Duration__c</fullName>
    <description>Total call duration in seconds</description>
    <inlineHelpText>Total call duration in seconds</inlineHelpText>
    <label>Call Duration</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>