metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Call_Plan_Coverage__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Call_Plan_Coverage__c</fullName>
    <description>Call Plan covered by Transcript</description>
    <inlineHelpText>Call Plan covered by Transcript</inlineHelpText>
    <label>Call Plan Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>