metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Call_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Call_Plan_URL__c</fullName>
    <description>Call Plan URL</description>
    <inlineHelpText>Call Plan URL</inlineHelpText>
    <label>Call Plan URL</label>
    <type>Url</type>
</CustomField>