metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Customer_Interruptions__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Customer_Interruptions__c</fullName>
    <description>A number of times the customer spoke over the sales rep</description>
    <inlineHelpText>A number of times the customer spoke over the sales rep</inlineHelpText>
    <label>Customer Interruptions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>