metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Customer_Sentiment__c</fullName>
    <description>Sentiment analysis of the customer</description>
    <inlineHelpText>Sentiment analysis of the customer (values above 0 are positive)</inlineHelpText>
    <label>Customer Sentiment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>