metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Longest_Monologue__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Longest_Monologue__c</fullName>
    <description>The longest monologue delivered by the sales rep in seconds</description>
    <inlineHelpText>The longest monologue delivered by the sales rep in seconds</inlineHelpText>
    <label>Longest Monologue</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>