metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Recording_URL__c</fullName>
    <description>Recording URL</description>
    <inlineHelpText>Recording URL from Zoom or Twilio</inlineHelpText>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>