metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Silence_Incidents__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Silence_Incidents__c</fullName>
    <description>A number of times nor customer nor sales rep were speaking for over 4 seconds</description>
    <inlineHelpText>A number of times nor customer nor sales rep were speaking for over 4 seconds</inlineHelpText>
    <label>Silence Incidents</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>