metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Silence_Time__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Silence_Time__c</fullName>
    <description>A percent of the call time when neither sales rep nor customer was speaking</description>
    <inlineHelpText>A percent of the call time when neither sales rep nor customer was speaking</inlineHelpText>
    <label>Silence Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>