metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Talk_Time__c</fullName>
    <description>A percent of the call time the sales rep spent talking to the customer</description>
    <inlineHelpText>A percent of the call time the sales rep spent talking to the customer</inlineHelpText>
    <label>Talk Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>