metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Task_ID__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Task_ID__c</fullName>
    <description>Salesforce Task Id</description>
    <inlineHelpText>Salesforce Task Id</inlineHelpText>
    <label>Task ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>