metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Transcript_Match__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Transcript_Match__c</fullName>
    <description>Transcript matches Call Plan</description>
    <inlineHelpText>Transcript matches Call Plan</inlineHelpText>
    <label>Transcript Match</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>