metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/fields/TCAP__Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>TCAP__Vocabulary__c</fullName>
    <description>A number of unique words pronounced by a sales rep throughout the call</description>
    <label>Vocabulary</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>