metadata/sf-prod/force-app/main/default/objects/TCAP__Call_Coach_Metrics__c/listViews/TCAP__All.listView-meta.xml
<ListView>
    <fullName>TCAP__All</fullName>
    <columns>NAME</columns>
    <columns>TCAP__Task_ID__c</columns>
    <columns>TCAP__Call_Duration__c</columns>
    <columns>TCAP__Call_Plan_Coverage__c</columns>
    <columns>TCAP__Call_Plan_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>